added informarion about the header that will later be updated with a logo image as well

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>My Blog</title>
+    <title>An ode to Henri Cartier Bresson</title>
     <link
       href="//fonts.googleapis.com/css?family=Roboto:400,500,300"
       rel="stylesheet"
@@ -18,5 +18,13 @@
   <body>
     <!-- Add your HTML markup here -->
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
+      <header>
+        <section>
+          <!--REMEMBER TO ADD IMAGE*/ -->
+          
+          <p>Inside his vision</p>
+        </section>
+      </header>
+
   </body>
 </html>
