added the title of my page

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <!-- Remember: Use semantic HTML tags like <header>, <main>, <nav>, <footer>, <section> etc -->
       <header>
         <section>
-          <!--REMEMBER TO ADD IMAGE*/ -->
-          
+          <img src="/img/henri-cartier-bresson.jpg" width="300">
           <p>Inside his vision</p>
+          <p><b>Henri Cartier Bresson</b></p>
         </section>
       </header>
 
