added information in the navigation bar

--- a/index.html
+++ b/index.html
@@ -24,7 +24,18 @@
           <p>Inside his vision</p>
           <p><b>Henri Cartier Bresson</b></p>
         </section>
+<nav class="navbar">
+  <ul>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Gallery</a></li>
+    <li><a href="#">His work</a></li>
+  </ul>
+</nav>
+
+
       </header>
+
+
 
   </body>
 </html>
