added some images after the aside bq text and centered them

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
 
             <p> In his later years ,returning to France, Cartier-Bresson recuperated in Marseille in late 1931 and deepened his relationship with the Surrealists. He became inspired by a 1930 photograph by Hungarian photojournalist Martin Munkacsi showing three naked young African boys, caught in near-silhouette, running into the surf of Lake Tanganyika. Titled Three Boys at Lake Tanganyika, this captured the freedom, grace and spontaneity of their movement and their joy at being alive. That photograph inspired him to stop painting and to take up photography seriously. He explained, "I suddenly understood that a photograph could fix eternity in an instant."</p>
 
-            <p>For a full read,<a href="https://en.wikipedia.org/wiki/Henri_Cartier-Bresson"></a> visit!</p>
+            <p>For a full read,<a href="https://en.wikipedia.org/wiki/Henri_Cartier-Bresson" alt="about Bresson"></a> visit!</p>
 
         </main>
 
-        <aside class="aside">
+        <aside>
           <ul>
           He once said : <hr>
           <li><blockquote><em>To me, photography is the simultaneous recognition, in a fraction of a second, of the significance of an event.</em></li>
@@ -54,8 +54,15 @@
           <li><em>Photographers deal in things which are continually vanishing and when they have vanished there is no contrivance on earth which can make them come back again.</em></li>
           <hr>
           <li><em>In photography, the smallest thing can be a great subject. The little, human detail can become a Leitmotiv.</em>></li>
-          </blockquote> 
+          </blockquote > 
         </ul>
+        <div align="center" , class="container">
+          <img src="https://i.pinimg.com/originals/bb/90/4b/bb904b90c8b6e1f4216fec4227e48de3.jpg">
+          <img src="https://imagenes.20minutos.es/files/image_656_370/uploads/imagenes/2012/04/18/56669.jpg">
+          <img src="https://d32dm0rphc51dk.cloudfront.net/sJEUtOAiO7DZaSvEvPI23g/large.jpg">
+        
+        </div>
+        
         </aside>
       </section>
 
