starting to add a new section.Here I have just added a new h2

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <li><em>In photography, the smallest thing can be a great subject. The little, human detail can become a Leitmotiv.</em>></li>
           </blockquote > 
         </ul>
+        <hr>
         <div align="center" , class="container">
           <img src="https://i.pinimg.com/originals/bb/90/4b/bb904b90c8b6e1f4216fec4227e48de3.jpg">
           <img src="https://imagenes.20minutos.es/files/image_656_370/uploads/imagenes/2012/04/18/56669.jpg">
@@ -64,6 +65,12 @@
         </div>
         
         </aside>
+      </section>
+
+      <section class="new-section">
+        <article>
+          <h3>The insightfulness of Bresson's work</h3>
+        </article>
       </section>
 
   </body>
