added the paragraphs with the information on the second section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,11 @@
       <section class="new-section">
         <article>
           <h3>The insightfulness of Bresson's work</h3>
+          <p>Widely considered “a photographer around the world”, Cartier-Bresson covered almost every continent with his inconspicuous Leica and visitors can experience the evolution of his work by walking through the different sections of the exhibition.</p>
+          <p>In order to keep his images natural, Cartier-Bresson opted for a camera that was light and easy to carry, making it possible to capture images that are totally spontaneous and meticulously composed.</p>
+          <p>Cartier-Bresson was able to photograph while being virtually unseen and was for this reason regarded as a pioneer of photojournalism. He also refused to alter any of his images and artfully framed his photographs himself, combining art and visual documentation.</p>
+          <p>The exhibition contributes to the effort being made to promote photographic expression in Colombia, and is also a chance for many emerging photographers and artists to bear witness to a comprehensive body of work of a canonical figure of the 20th century who elevated humanity’s decisive moments to an art form.</p>
+          
         </article>
       </section>
 
