added one of my favourite images from Bresson's work

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
           <p>In order to keep his images natural, Cartier-Bresson opted for a camera that was light and easy to carry, making it possible to capture images that are totally spontaneous and meticulously composed.</p>
           <p>Cartier-Bresson was able to photograph while being virtually unseen and was for this reason regarded as a pioneer of photojournalism. He also refused to alter any of his images and artfully framed his photographs himself, combining art and visual documentation.</p>
           <p>The exhibition contributes to the effort being made to promote photographic expression in Colombia, and is also a chance for many emerging photographers and artists to bear witness to a comprehensive body of work of a canonical figure of the 20th century who elevated humanity’s decisive moments to an art form.</p>
-          
+          <hr>
+          <b>One of my favourite photographs. Shot in Romania :</b>
+          <div align="center"><img src="https://dmdlnu87i51n1.cloudfront.net/v1/uk/cja87ujvc01nb0126hn7ludvx/31x10:1532x804/1200x630/cartierbresson_onatrain.jpg"></div>       
         </article>
       </section>
 
