adding another section with curiosities about his work and teachings

--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
           <b>One of my favourite photographs. Shot in Romania :</b>
           <div align="center"><img src="https://dmdlnu87i51n1.cloudfront.net/v1/uk/cja87ujvc01nb0126hn7ludvx/31x10:1532x804/1200x630/cartierbresson_onatrain.jpg"></div>       
         </article>
+
+        <section class="second-section">
+          <article>
+            <h3>Curiosities</h3>
+            <p></p>
+          </article>
+        </section>
       </section>
 
   </body>
