added the 7 curiosities in HTML

--- a/index.html
+++ b/index.html
@@ -82,7 +82,25 @@
         <section class="second-section">
           <article>
             <h3>Curiosities</h3>
-            <p></p>
+            <p>7 Things Every Photographer Should Learn From Henri Cartier-Bresson</p>
+            <ol>
+              <li>Find out where the action is, and get there!</li>
+             
+              <cite>“The world is going to pieces and people like Adams and Weston are photographing rocks!”  –  Henri Cartier-Bresson</cite>
+             
+              <li>Don’t “over-think” composition</li>
+              <cite>“In photography, visual organization can stem only from a developed instinct.” – Henri Cartier-Bresson</cite>
+              <li> Be inspired by others</li>
+              <cite>“I must say that it was this photo that lit the fuse and gave me the desire to study photography through the lens of a camera.” – Henri Cartier-Bresson</cite>
+              <li>Get the shot right in-camera</li>
+              <cite>Once the picture is in the box, I'm not all that interested in what happens next. Hunters, after all, aren't cooks.” – Henri Cartier-Bresson</cite>
+              <li>Stop talking about your gear for a second!</li>
+              <cite>“Photography has not changed since its origin except in its technical aspects, which for me are not important.”- Henri Cartier-Bresson</cite>
+              <li>Choose your moment</li>
+              <cite>“The marvellous mixture of emotion and geometry, together in a single instant.” – Henri Cartier Bresson</cite>
+              <li> Focus on the subject rather than the photography!</li>
+              <cite>Photography is nothing – it's life that interests me.” – Henri Cartier Bresson</cite>
+            </ol>
           </article>
         </section>
       </section>
