added a footer and now I would like to continue styling it

--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
             </div>
           </section>
         </section>
+
+        <footer class="add">
+          
+          <p>Thank you for your time!</p>
+        </footer>
       </section>
 
   </body>
