--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 </nav>
       </header>
 
+      <div id="badge">
+        <p>Be inspired!</p>
+      </div>
+
       <section>
         <main>
           <h1>About the artist</h1>
